[metadata]
name = xseof
version = attr: xseof.__version__
description = I/O library for the ESA EOF files.
long_description = file: README.rst
keywords = orbit, attitude, dataclasses
license = BSD 3-Clause License
license_files = LICENSE.txt
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Libraries :: Python Modules

[options]
install_requires =
    xsdata
packages = find:
include_package_data = True

[options.extras_require]
podhub =
    lxml

[options.packages.find]
exclude = tests
