[metadata]
name = xseof
version = attr: xseof.__version__
author = Antonio Valentino
description = I/O library for the ESA EOF files.
long_description = file: README.rst, NEWS.rst
long_description_content_type = text/x-rst
keywords = orbit, attitude, dataclasses
license = Apache License 2.0
license_files = LICENSE.txt
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Libraries :: Python Modules
platforms = any
project_urls =
    Source = https://github.com/avalentino/xseof
    Tracker = https://github.com/avalentino/xseof/issues
    Documentation = https://github.com/avalentino/xseof/blob/main/README.rst
    Changelog = https://github.com/avalentino/xseof/blob/main/NEWS.rst
    Download = https://pypi.org/project/xseof

[options]
install_requires =
    xsdata
packages = find:
include_package_data = True
python_requires = >=3.6
zip_safe = True

[options.extras_require]
podhub =
    lxml

[options.packages.find]
exclude = tests
